--- a/package.json
+++ b/package.json
@@ -2,12 +2,11 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
-  "scripts": {
-    "dev": "next dev ",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
+"scripts": {
+  "dev": "next dev -p 4000",
+  "build": "next build",
+  "start": "next start -p 4000"
+},
   "dependencies": {
     "@next/env": "^15.0.1",
     "@radix-ui/react-avatar": "^1.1.1",
