--- a/package.json
+++ b/package.json
@@ -2,16 +2,17 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
-"scripts": {
-  "dev": "next dev -p 4000",
-  "build": "next build",
-  "start": "next start -p 4000"
-},
+  "scripts": {
+    "dev": "next dev -p 4000",
+    "build": "next build",
+    "start": "next start -p 4000"
+  },
   "dependencies": {
     "@next/env": "^15.0.1",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-dialog": "^1.1.2",
     "@radix-ui/react-dropdown-menu": "^2.1.2",
+    "@radix-ui/react-select": "^2.1.2",
     "@radix-ui/react-slot": "^1.1.0",
     "@tanstack/react-table": "^8.20.5",
     "aos": "^2.3.4",
@@ -27,6 +28,7 @@
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "sass": "^1.80.4",
+    "swr": "^2.2.5",
     "tailwind-merge": "^2.5.4",
     "tailwindcss-animate": "^1.0.7"
   },
